<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_back"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id ="@+id/logo_login"
            android:src="@drawable/logo2"
            android:layout_gravity="center"
            android:alpha="0.8"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_width="242dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="30dp"
            android:weightSum="1">

            <TextView
                android:text="Sign Up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                android:textSize="30sp"
                android:shadowColor="@color/black"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="50dp"
                android:layout_weight="0.62" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_username"
                android:background="@drawable/rounded_edittext_focused"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/white"
                android:textColorHighlight="?android:attr/colorFocusedHighlight"
                android:textColorHint="@color/light_gray"
                android:gravity="center_vertical|center_horizontal"
                android:typeface="normal" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext_focused"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHighlight="?android:attr/colorFocusedHighlight"
                android:textColorHint="@color/light_gray"
                android:gravity="center_vertical|center_horizontal"
                android:typeface="normal" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext_focused"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHighlight="?android:attr/colorFocusedHighlight"
                android:textColorHint="@color/light_gray"
                android:gravity="center_vertical|center_horizontal"
                android:typeface="normal" />

            <!-- Login Button -->

            <Button
                android:id="@+id/register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:text="@string/btn_register"
                android:textColor="@color/black"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp" />

            <!-- Link to Login Screen -->

        </LinearLayout>

        <Button
            android:id="@+id/linkToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />


    </LinearLayout>

</RelativeLayout>