<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_back">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <ImageView
                    android:id ="@+id/logo_login"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"
                    android:alpha="0.8"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="300dp"
                    android:layout_height="300dp" />

                <Button
                    android:id="@+id/linkToRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/btn_link_to_register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_focused"
                    android:hint="Email"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_below="@+id/logo_login"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="12dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/light_gray" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_focused"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_below="@+id/email"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/light_gray" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:text="@string/btn_login"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:shadowColor="@color/black"
                    android:layout_below="@+id/password"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="11dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp" />
        </RelativeLayout>

</LinearLayout>